--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,12 +369,8 @@ body {
   margin-block-start: 0px;
 }
 
-.toggleModeDesktop {
-  visibility: show;
-}
-
-.toggleModeMobile {
-  visibility: collapse;
+#toggleMode {
+  visibility: visible;
 }
 
 /*-----------------------------------*\
@@ -851,6 +847,13 @@ textarea.contact-input {
  */
 @media (max-width: 768px) {
   /**
+     * HEADER
+     */
+  .header {
+    padding-inline: 10px;
+  }
+
+  /**
    * PORTFOLIO
    */
   .portfolio-list {
@@ -858,17 +861,13 @@ textarea.contact-input {
     grid-template-columns: 1fr;
   }
 
-  .toggleModeDesktop {
-    visibility: collapse;
-  }
-
-  .toggleModeMobile {
-    visibility: show;
-  }
-
   .swiper-wrapper {
     grid-template-columns: repeat(1, 1fr);
     gap: 0;
+  }
+
+  #toggleMode {
+    visibility: collapse;
   }
 }
 
