--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -890,6 +890,10 @@ textarea.contact-input {
     padding-inline: 10px;
   }
 
+  .navbar-link {
+    padding-block: 8px;
+  }
+
   /**
    * PORTFOLIO
    */
@@ -902,12 +906,6 @@ textarea.contact-input {
     grid-template-columns: repeat(1, 1fr);
     gap: 0;
   }
-
-  /**
-  #toggleMode {
-    visibility: collapse;
-  }
-  */
 }
 
 @media (min-width: 600px) {
